syntax = "proto3";


package com.example.grpctest;

option java_multiple_files = true;
option java_package = "com.performancetest";


service CalculationService{
  rpc add(AdditionRequest) returns (AdditionResponse);
}

message AdditionRequest{
  int32 firstNumber = 1;
  int32 secondNumber = 2;
}

message AdditionResponse{
  int32 sum = 1;
}

